[project]
name = "a2a-resilience"
version = "0.1.0"
description = "Idempotent Task Execution with Agent Failover for A2A"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["a2a", "agent", "resilience", "failover", "idempotency"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["a2a_resilience*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
